[workspace]
members = [
  "crates/harbour-core",
  "crates/harbour-axum",
  "crates/harbour-strategy-local",
  "crates/harbour-strategy-jwt",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
argon2 = "0.5"
async-trait = "0.1"
axum = "0.7"
http = "1"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = "0.5"
