[package]
name = "harbour-axum"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
harbour-core = { path = "../harbour-core" }
async-trait.workspace = true
axum.workspace = true
http.workspace = true
tower.workspace = true

[dev-dependencies]
harbour-strategy-local = { path = "../harbour-strategy-local" }
tokio.workspace = true
