[package]
name = "harbour-axum"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[features]
## Enables `HarbourAuth::with_jwt_issuer` for automatic JWT issuance after login.
## On by default; disable with `default-features = false` for a leaner build.
default = ["jwt"]
jwt = ["dep:harbour-strategy-jwt"]

[dependencies]
harbour-core = { path = "../harbour-core" }
harbour-strategy-jwt = { path = "../harbour-strategy-jwt", optional = true }
async-trait.workspace = true
axum.workspace = true
http.workspace = true
serde_json.workspace = true
tower.workspace = true

[dev-dependencies]
harbour-strategy-local = { path = "../harbour-strategy-local" }
harbour-strategy-jwt = { path = "../harbour-strategy-jwt" }
tokio.workspace = true
