[package]
name = "harbour-strategy-jwt"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
harbour-core = { path = "../harbour-core" }
async-trait.workspace = true
jsonwebtoken.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true
