[package]
name = "harbour-strategy-session"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
harbour-core = { path = "../harbour-core" }
harbour-strategy-jwt = { path = "../harbour-strategy-jwt" }
async-trait.workspace = true

[dev-dependencies]
tokio.workspace = true
